fix(playwright): Fix CI