@@ -39,52 +39,14 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 
-/**
- * Shared typed-scope resolution logic reused by {@link PlaywrightFind} and {@link
- * PlaywrightLocator}.
- *
- * <p>Neither an explicit element scope nor a structured scope is resolved here at chain-build time
- * by its callers: {@link PlaywrightFind} and {@link PlaywrightLocator} only append a {@link
- * IPendingScope} to a single ordered list via {@link #append(List, IPendingScope)} and defer
- * resolution until a terminal operation calls {@link #resolvePendingScopes}, so a mixed chain of
- * explicit and structured scopes is always resolved in the exact order it was declared, and a
- * structured scope's definition is re-evaluated against the live DOM on every retry or replay
- * instead of being frozen into one concrete node.
- */
+/** Shared typed-scope resolution logic used by Playwright find and locator chains. */
 final class PlaywrightScopeResolver {
 
-    /**
-     * The one {@link WaitEngine} coordinator frame resolution polls through - the same generic
-     * primitive {@link io.webagent4j.locator.LocatorEngine} itself uses internally, reused here
-     * rather than duplicated, so frame resolution is one more caller of the existing wait
-     * architecture rather than a second, parallel resolution engine.
-     */
     private static final WaitEngine FRAME_WAIT_ENGINE = new WaitEngine();
+    private static final Duration ONE_SHOT_TIMEOUT = Duration.ofNanos(1);
 
-    private PlaywrightScopeResolver() {
-        // not instantiable
-    }
+    private PlaywrightScopeResolver() {}
 
-    /**
-     * Returns a copy of the context scoped to the supplied element, after proving - if the context
-     * already has an element root - that the supplied element is a descendant of, or the same node
-     * as, that root.
-     *
-     * <p>{@code within(...)} is a conjunction of nested constraints, never a replacement: {@code
-     * within(A).within(B)} means "B, and B is inside A", not "B, regardless of A". When the context
-     * is still unscoped (the page root, nothing narrowed it yet), the supplied element simply
-     * becomes the first narrowing scope - there is no parent to prove membership against.
-     * Otherwise, containment is proven against the real DOM relationship, never inferred from
-     * diagnostics (accessible name, role, {@link io.webagent4j.locator.LocatorScope#path()}, or any
-     * other human-readable description) - those describe the scope for logging, they do not
-     * establish it.
-     *
-     * @throws LocatorNotFoundException if the current root or the supplied element is detached, or
-     *     if the supplied element exists but is not inside the current root
-     * @throws LocatorException if the supplied element cannot be validated against the current
-     *     backend (a different {@link IElement} implementation, a different page, or a different
-     *     browser context)
-     */
     static LocatorContext resolveElementScope(LocatorContext context, IElement scope) {
         Objects.requireNonNull(scope, "scope");
         Optional<IElement> currentRoot = context.scope().root();
@@ -94,15 +56,6 @@ final class PlaywrightScopeResolver {
         return withinResolvedElement(context, scope, "Explicit element");
     }
 
-    /**
-     * Proves {@code child} is a descendant of, or the same node as, {@code parent} using the real
-     * Playwright DOM relationship - never accessible name, role, or any diagnostic label. Presence
-     * is checked with a synchronous {@link Locator#count()} first, deliberately avoiding an
-     * implicit wait: a scope that has become detached must fail immediately as "not found", not be
-     * silently retried or reinterpreted once its element handle is requested. Any exception this
-     * method lets through after that presence check is a genuine backend/runtime failure, not a
-     * "not found" or "ambiguous" outcome, and must propagate unchanged.
-     */
     private static void requireDescendantOrSelf(IElement parent, IElement child) {
         if (!(parent instanceof PlaywrightElement playwrightParent)
                 || !(child instanceof PlaywrightElement playwrightChild)) {
@@ -132,20 +85,12 @@ final class PlaywrightScopeResolver {
         }
     }
 
-    /** Returns a new immutable pending-scope list with {@code scope} appended. */
     static List<IPendingScope> append(List<IPendingScope> pending, IPendingScope scope) {
         List<IPendingScope> next = new ArrayList<>(pending);
         next.add(scope);
         return List.copyOf(next);
     }
 
-    /**
-     * Resolves every pending scope against {@code base}, strictly in declaration order: an explicit
-     * element scope narrows the context immediately, a structured scope is re-resolved fresh
-     * through {@link #resolveStructuredScope}, and each result becomes the starting context for the
-     * next entry - exactly the order the caller wrote the {@code within(...)} chain in, never
-     * regrouped by scope kind.
-     */
     static LocatorContext resolvePendingScopes(
             ILocatorEngine engine, LocatorContext base, List<IPendingScope> pending) {
         return resolvePendingScopes(
@@ -177,16 +122,6 @@ final class PlaywrightScopeResolver {
         return resolved;
     }
 
-    /**
-     * Resolves one frame boundary against the current live context with one lookup bounded by the
-     * caller's shared remaining deadline. This is always one prerequisite hop inside an outer
-     * {@link io.webagent4j.wait.WaitEngine}-driven operation, never a new independent deadline.
-     *
-     * <p>A frame is a separate document boundary, never a descendant DOM element of the page that
-     * contains its {@code <iframe>}: the returned context's backend is a brand-new {@link
-     * PlaywrightLocatorBackend} rooted at the frame's own document, and its {@link LocatorScope}
-     * starts a fresh chain (see {@link LocatorScope#frame}) rather than narrowing the current one.
-     */
     static LocatorContext resolveFrameScope(
             ILocatorEngine engine, LocatorContext context, FrameDefinition definition) {
         WaitBudget budget =
@@ -212,22 +147,6 @@ final class PlaywrightScopeResolver {
         return descendIntoFrame(engine, iframe, definition, context);
     }
 
-    /**
-     * Resolves the {@code <iframe>} element matching {@code definition} against {@code
-     * liveContext}, with real {@link io.webagent4j.wait.WaitEngine}-driven waiting/retrying up to
-     * {@code timeout} - used by {@link PlaywrightFrameLocator}'s own terminal operations, where the
-     * frame being searched for is the actual target of the caller's wait, not a prerequisite hop.
-     *
-     * <p>Every one of {@link FrameDefinition}'s criteria - id, name, title, and url - is applied
-     * <em>before</em> the final 0/1/N classification, not id/name/title first with url checked only
-     * once a single candidate has already been settled on: id/name/title are resolved through the
-     * engine's own CSS discovery (an {@code <iframe>} is found the same deterministic way as any
-     * other element), then every currently-matching candidate is filtered by the url criterion, and
-     * only the resulting set is classified. Two frames sharing a {@code name} are therefore no
-     * longer forced into an ambiguous failure before a distinguishing {@code url} criterion ever
-     * gets a chance to disambiguate them - {@code url} genuinely participates in resolving which
-     * frame is meant, exactly like every other criterion.
-     */
     static LocatorResult resolveFrameElement(
             ILocatorEngine engine,
             ILiveLocatorContext liveContext,
@@ -236,22 +155,6 @@ final class PlaywrightScopeResolver {
         return resolveFrameElement(engine, liveContext, definition, timeout, Optional.empty());
     }
 
-    /**
-     * As {@link #resolveFrameElement(ILocatorEngine, ILiveLocatorContext, FrameDefinition,
-     * Duration)}, but additionally honors {@code stability} - always {@link Optional#empty()} for a
-     * {@link #resolveFrameScope} prerequisite hop, since requiring continuous stability inherently
-     * needs multiple polls over time and would defeat the one-shot, non-retrying probe that hop
-     * must stay bounded to; only {@link #resolveTerminalFrameElement} (the real terminal wait
-     * target) passes the definition's own {@link FrameDefinition#stability()} through.
-     *
-     * <p>Reuses the same {@link io.webagent4j.wait.WaitEngine} coordinator every other domain in
-     * this codebase already polls through (see {@link #FRAME_WAIT_ENGINE}) rather than a parallel
-     * resolution engine: each poll performs one {@link ILocatorEngine#locateAll} lookup for the
-     * id/name/title criteria, bounded by the outer budget's current remainder, filters the result
-     * by the url criterion, and classifies what remains. Ambiguity found on any single poll ends
-     * the wait immediately, exactly like {@link ILocatorEngine#locateSingle} already does at the
-     * element level: it is a fail-safe condition, never a transient state to retry through.
-     */
     private static LocatorResult resolveFrameElement(
             ILocatorEngine engine,
             ILiveLocatorContext liveContext,
@@ -259,8 +162,7 @@ final class PlaywrightScopeResolver {
             Duration timeout,
             Optional<Duration> stability) {
         Objects.requireNonNull(definition, "definition");
-        String selector = frameElementSelector(definition);
-        LocatorDefinition query = LocatorDefinition.css(selector);
+        LocatorDefinition query = LocatorDefinition.css(frameElementSelector(definition));
 
         WaitBudget budget = WaitBudget.start(timeout, FRAME_WAIT_ENGINE.clock());
         WaitPolicy policy =
@@ -286,16 +188,6 @@ final class PlaywrightScopeResolver {
         return toLocatorResult(query, waited.value().orElseThrow(), budget.elapsed());
     }
 
-    /**
-     * One immediate, non-retrying probe: re-resolves {@code liveContext} (treating a typed
-     * not-found there - a parent frame this hop lives inside currently absent - exactly like an
-     * absent target, never a hard failure), discovers every current id/name/title candidate,
-     * filters by the url criterion when present, and classifies the filtered set. More than one
-     * surviving candidate ends the wait right there as ambiguous; zero keeps the {@link
-     * io.webagent4j.wait.WaitEngine} polling; exactly one is reported satisfied, carrying its own
-     * identity as the stability key so a {@code stableFor} policy tracks the same real candidate
-     * remaining the unique match, not merely "some candidate or other" being unique poll to poll.
-     */
     private static WaitSample<FrameMatch> probeFrameOnce(
             ILocatorEngine engine,
             ILiveLocatorContext liveContext,
@@ -311,6 +203,7 @@ final class PlaywrightScopeResolver {
             }
             return WaitSample.pending();
         }
+
         LocatorDefinition boundedQuery = query.withTimeout(atLeastOneNano(budget.remaining()));
         List<LocatorCandidate> matches =
                 filterByUrl(engine.locateAll(context, boundedQuery), definition, budget);
@@ -325,20 +218,10 @@ final class PlaywrightScopeResolver {
         if (matches.isEmpty()) {
             return WaitSample.pending();
         }
-        LocatorCandidate winner = matches.get(0);
+        LocatorCandidate winner = matches.getFirst();
         return WaitSample.satisfied(new FrameMatch(context, winner), winner.identity());
     }
 
-    /**
-     * Filters id/name/title candidates by {@link FrameDefinition#url()}, when present. A candidate
-     * whose underlying {@code <iframe>} element has vanished between discovery ({@code locateAll})
-     * and this check - a normal detachment race, most often a frame mid-removal - is excluded from
-     * this poll rather than aborting the whole resolution: the next poll re-discovers candidates
-     * from scratch, so a genuinely present frame is never lost. A genuine backend or runtime
-     * failure (a disconnected browser, a closed context, or any other opaque failure) is never
-     * treated as "this candidate does not match" - see {@link #matchesUrl} for exactly which
-     * conditions are absorbed as a detachment race versus propagated unchanged.
-     */
     private static List<LocatorCandidate> filterByUrl(
             List<LocatorCandidate> candidates, FrameDefinition definition, WaitBudget budget) {
         if (definition.url().isEmpty()) {
@@ -358,14 +241,10 @@ final class PlaywrightScopeResolver {
         return List.copyOf(filtered);
     }
 
-    /**
-     * Preserves WaitEngine's existing final immediate-probe granularity without a comfort floor.
-     */
     private static Duration atLeastOneNano(Duration duration) {
         return duration.isZero() ? Duration.ofNanos(1) : duration;
     }
 
-    /** Builds the {@link LocatorResult} a successful {@link #resolveFrameElement} call returns. */
     private static LocatorResult toLocatorResult(
             LocatorDefinition query, FrameMatch match, Duration elapsed) {
         LocatorCandidate winner = match.candidate();
@@ -400,18 +279,8 @@ final class PlaywrightScopeResolver {
                 diagnostics);
     }
 
-    /** One poll's live-resolved context together with the single candidate that satisfied it. */
     private record FrameMatch(LocatorContext context, LocatorCandidate candidate) {}
 
-    /**
-     * Resolves {@code definition} as the terminal target of the caller's own wait: {@code
-     * parentPendingScopes} (everything before this frame in the chain, if anything) is re-resolved
-     * fresh on every retry through a live context - so a parent frame this frame lives inside is
-     * re-verified on every attempt too, not resolved once before the wait begins - while {@code
-     * definition} itself is searched for with real {@link io.webagent4j.wait.WaitEngine}-driven
-     * waiting up to {@code timeout}. Used by both {@link PlaywrightFrame}'s own state reads (url,
-     * title, navigate) and {@link PlaywrightFrameLocator}'s terminal operations.
-     */
     static LocatorResult resolveTerminalFrameElement(
             ILocatorEngine engine,
             LocatorContext baseContext,
@@ -426,13 +295,6 @@ final class PlaywrightScopeResolver {
                 definition.stability());
     }
 
-    /**
-     * Returns a live context whose {@link ILiveLocatorContext#resolve()} re-resolves the whole
-     * pending scope chain fresh against the live DOM on every call, strictly in declaration order -
-     * shared by every terminal frame operation so a {@link io.webagent4j.wait.WaitEngine}-driven
-     * wait always re-derives its scopes from the current DOM on every polling attempt, never
-     * reusing a snapshot resolved before the wait began.
-     */
     static ILiveLocatorContext liveContext(
             ILocatorEngine engine, LocatorContext baseContext, List<IPendingScope> pendingScopes) {
         return liveContext(
@@ -465,16 +327,6 @@ final class PlaywrightScopeResolver {
         };
     }
 
-    /**
-     * Converts a resolved {@code <iframe>} element into a {@link LocatorContext} rooted at that
-     * frame's own document, via Playwright's {@link Locator#contentFrame()} - a lazily-resolving
-     * {@link FrameLocator}, not a frozen {@link Frame} snapshot, so every later query issued
-     * through the returned context's backend re-locates the same {@code <iframe>} element and its
-     * current content document fresh, on every real Playwright call. A removed-then-reinserted
-     * {@code <iframe>} matching the same selector is followed transparently; one that no longer
-     * matches, or now matches more than one element, surfaces as a typed not-found or ambiguous
-     * failure the next time it is actually used - never a stale reference to the old document.
-     */
     static LocatorContext descendIntoFrame(
             ILocatorEngine engine,
             LocatorResult iframe,
@@ -492,23 +344,6 @@ final class PlaywrightScopeResolver {
         return backend.context();
     }
 
-    /**
-     * Evaluates one URL candidate against {@code match}, distinguishing three outcomes rather than
-     * treating every exception alike:
-     *
-     * <ul>
-     *   <li>the {@code <iframe>} element itself was removed between discovery and this call - a
-     *       {@link TimeoutError}, bounded to its share of the remaining frame budget, is treated as
-     *       absence only after a fresh count proves it; Playwright's canonical frame-detached
-     *       protocol failure is already a definitive disappearance signal;
-     *   <li>the element is present but its content document is not (a fresh iframe not yet loaded,
-     *       or one whose frame is {@link Frame#isDetached()}) - also "does not currently match", no
-     *       exception involved at all;
-     *   <li>anything else - including a still-present locator after a timeout, a failed presence
-     *       recheck, an opaque failure that merely mentions detachment, a disconnected browser, or
-     *       a closed context - propagates unchanged, never absorbed as "not found".
-     * </ul>
-     */
     private static boolean matchesUrl(
             IElement iframeElement, TextMatch match, double inspectionTimeoutMillis) {
         Locator iframeLocator = PlaywrightLocatorBackend.unwrap(iframeElement);
@@ -533,6 +368,7 @@ final class PlaywrightScopeResolver {
             }
             throw failure;
         }
+
         Frame frame = handle.contentFrame();
         if (frame == null || frame.isDetached()) {
             return false;
@@ -551,7 +387,6 @@ final class PlaywrightScopeResolver {
         };
     }
 
-    /** Returns true only when a fresh synchronous count proves the timed-out iframe is gone. */
     private static boolean confirmedAbsent(Locator locator, TimeoutError original) {
         try {
             return locator.count() == 0;
@@ -584,14 +419,6 @@ final class PlaywrightScopeResolver {
         return selector.toString();
     }
 
-    /**
-     * Builds a CSS attribute selector for one frame id/name/title criterion. Only exact and
-     * case-insensitive-exact criteria are supported here - the only two {@link TextMatch} kinds
-     * {@link io.webagent4j.browser.FrameDefinition#named} and {@link
-     * io.webagent4j.browser.FrameDefinition#withTitle} can actually produce - so any other kind
-     * fails explicitly rather than being silently dropped from the selector, which would otherwise
-     * match a broader, unintended set of frames.
-     */
     private static String frameAttributeSelector(String attribute, TextMatch match) {
         String escaped = match.value().replace("\\", "\\\\").replace("\"", "\\\"");
         String caseFlag =
@@ -621,17 +448,6 @@ final class PlaywrightScopeResolver {
         return description.toString();
     }
 
-    /**
-     * Returns a copy of the context progressively narrowed by an explicit element scope followed by
-     * every {@code containingText} constraint, applied in order.
-     *
-     * <p>Each constraint is resolved as a unique, unambiguous region inside the scope narrowed by
-     * the previous constraint: {@code containingText("Laptop B").containingText("Available")} first
-     * narrows to the "Laptop B" region, then narrows again to "Available" strictly inside that
-     * region, not anywhere on the page. A constraint is a hard scope, not a scoring bonus, so an
-     * ambiguous or unresolvable constraint fails explicitly instead of silently narrowing to the
-     * wrong region.
-     */
     static LocatorContext resolveStructuredScope(
             ILocatorEngine engine, LocatorContext context, ILocatorScope<IElement> scope) {
         WaitBudget budget =
@@ -650,6 +466,7 @@ final class PlaywrightScopeResolver {
         if (scope.scopeElement().isPresent()) {
             next = resolveElementScope(next, scope.scopeElement().get());
         }
+
         List<String> containingText =
                 Objects.requireNonNull(scope.containingText(), "scope.containingText()");
         for (String text : containingText) {
@@ -681,23 +498,6 @@ final class PlaywrightScopeResolver {
         return normalized.length() <= 80 ? normalized : normalized.substring(0, 77) + "...";
     }
 
-    /**
-     * Minimal timeout used only by the backend-neutral compatibility path below. The Playwright
-     * backend uses one direct 0/1/N probe against the shared caller budget instead of starting a
-     * nested locator-engine deadline.
-     */
-    private static final Duration ONE_SHOT_TIMEOUT = Duration.ofNanos(1);
-
-    /**
-     * Resolves one unambiguous container matching {@code text}. The Playwright path checks every
-     * current container's accessible name so {@code aria-label}, {@code aria-labelledby}, labels,
-     * and content all participate in the same uniqueness proof. Visible text is used only when
-     * accessible-name resolution demonstrably reports a safe "not found" outcome.
-     *
-     * <p>The fallback is never triggered by ambiguity or by a genuine backend/runtime failure: both
-     * are hard constraints that must propagate unchanged rather than being silently retried under a
-     * different strategy.
-     */
     private static IElement resolveContainer(
             ILocatorEngine engine, LocatorContext context, String text, WaitBudget budget) {
         if (context.backend() instanceof PlaywrightLocatorBackend backend) {
@@ -718,6 +518,7 @@ final class PlaywrightScopeResolver {
                         atLeastOneNano(budget.remaining()));
             }
         }
+
         try {
             engine.locateSingle(
                     context,
@@ -729,6 +530,7 @@ final class PlaywrightScopeResolver {
                 throw directLabelFailure;
             }
         }
+
         try {
             return engine.locateSingle(
                             context,
